# Dashboard

./: .gitignore  AI_HANDOFF_LOG.md  GARMIN_DIRECT_HANDOFF.md  GARMIN_DIRECT_MACHINE_MIGRATION_HANDOFF.md  app-redesign.css  coach_v2_test.js  comprehensive_refactor_test.py  coros_plan_import_test.js  index  index.backup-before-refactor.html  index.html  manifest.json  manual_plan_builder_test.js  mobile_layout_test.py  plan_file_import_test.js  smoke_test_dashboard.py  studio-shell.css  studio-surfaces.css  sw.js  training-hub-ui.css  training-studio-ui.css  training_analyst_test.js  verify_dashboard.js
android-sync-companion/: README.md  gradle.properties  settings.gradle.kts
apps-script/: Code.gs  README.md
docs/: ARCHITECTURE_REFACTOR_PLAN.md
tools/garmin-direct-bridge/: .gitignore  README.md  pyproject.toml
tools/garmin-direct-bridge/docs/: AUTH_AND_SECRET_STORAGE.md  CAPABILITY_MATRIX.md  ENDPOINT_NOTES.md  ERROR_AND_RETRY_POLICY.md  LOCAL_DATA_RETENTION.md
tools/garmin-direct-bridge/src/garmin_direct/: __init__.py  activity_detail.py  activity_sync.py  auth.py  auto_sync.py  budget.py  capability_probe.py  cli.py  client.py  config.py  dedupe.py  errors.py  firebase_plan.py  fit_track.py  maintenance.py  normalize.py  resume_worker.py  safe_logging.py  scheduler.py  sync_store.py  wellness_normalize.py  wellness_sync.py
tools/garmin-direct-bridge/tests/: test_activity_sync.py  test_auto_sync.py  test_core.py  test_firebase_plan.py  test_normalize_dedupe.py  test_resume_worker.py  test_scheduler.py  test_wellness_normalize.py  test_wellness_sync.py
(+40 files in other folders)
